--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "pragmarx/google2fa": "^8.0",
         "symfony/string": "^7.3"
     },
     "require-dev": {
